RESOLVED FIXED161999
[media-source] fix imported/w3c/web-platform-tests/media-source/mediasource-duration.html
https://bugs.webkit.org/show_bug.cgi?id=161999
Summary [media-source] fix imported/w3c/web-platform-tests/media-source/mediasource-d...
Jer Noble
Reported 2016-09-14 16:38:42 PDT
[media-source] fix imported/w3c/web-platform-tests/media-source/mediasource-duration.html
Attachments
Patch (5.53 KB, patch)
2016-09-14 16:47 PDT, Jer Noble
no flags
Archive of layout-test-results from ews107 for mac-yosemite-wk2 (1.49 MB, application/zip)
2016-09-14 17:48 PDT, Build Bot
no flags
Archive of layout-test-results from ews103 for mac-yosemite (966.67 KB, application/zip)
2016-09-14 17:50 PDT, Build Bot
no flags
Archive of layout-test-results from ews117 for mac-yosemite (1.38 MB, application/zip)
2016-09-14 18:35 PDT, Build Bot
no flags
Patch (7.06 KB, patch)
2016-09-14 21:23 PDT, Jer Noble
eric.carlson: review+
jer.noble: commit-queue+
Jer Noble
Comment 1 2016-09-14 16:47:15 PDT
Build Bot
Comment 2 2016-09-14 17:48:22 PDT
Comment on attachment 288895 [details] Patch Attachment 288895 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/2075659 New failing tests: imported/w3c/web-platform-tests/media-source/mediasource-duration.html
Build Bot
Comment 3 2016-09-14 17:48:24 PDT
Created attachment 288906 [details] Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 4 2016-09-14 17:50:40 PDT
Comment on attachment 288895 [details] Patch Attachment 288895 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/2075687 New failing tests: imported/w3c/web-platform-tests/media-source/mediasource-duration.html
Build Bot
Comment 5 2016-09-14 17:50:42 PDT
Created attachment 288907 [details] Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 6 2016-09-14 18:35:33 PDT
Comment on attachment 288895 [details] Patch Attachment 288895 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2075927 New failing tests: imported/w3c/web-platform-tests/media-source/mediasource-duration.html
Build Bot
Comment 7 2016-09-14 18:35:36 PDT
Created attachment 288908 [details] Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Jer Noble
Comment 8 2016-09-14 21:23:42 PDT
Jer Noble
Comment 9 2016-09-15 16:36:02 PDT
Jer Noble
Comment 10 2016-09-16 11:07:07 PDT
Alexey Proskuryakov
Comment 11 2016-09-25 17:47:43 PDT
This test is very flaky, see bug 162308.
Note You need to log in before you can comment on or make changes to this bug.