[media-source] fix imported/w3c/web-platform-tests/media-source/mediasource-duration.html https://bugs.webkit.org/show_bug.cgi?id=161999

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

Expected results had a stray newline.

* web-platform-tests/media-source/mediasource-duration-expected.txt:

Source/WTF:

The mediasource-duration.html test tries to set the duration of a MediaSource to a double value
(5.0), then some work happens and the duration is set to a media time (12533/2500, or 5.0132).
The test then tries to set that value as the duration, converted from a media time to a double,
and asserts that no duration change event is fired.  But because the floating point value and the
media time value are ever so slightly different, this round-tripping fails.

Fix this bug in MediaTime by, when one side or the other of a comparison is a floating point
MediaTime, convert both sides to doubles and run the comparison against those values. This preserves
the transitive equality of doubles <-> MediaTimes.

* wtf/MediaTime.cpp:
(WTF::MediaTime::compare):

Tools:

* TestWebKitAPI/Tests/WTF/MediaTime.cpp:
(TestWebKitAPI::TEST):

LayoutTests:

* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/180205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206032 268f45cc-cd09-0410-ab3c-d52691b4dbfc